# fake-account-detector

./: .env.example  Procfile  README.md  app.py  model.py  pyproject.toml  render_deploy.md  requirements.txt  wsgi.py
fake-account-detector/: LICENSE  README.md  app.py  model.py  pyproject.toml
fake-account-detector/csv/: allAccountData.csv  fakeAccountData.csv  realAccountData.csv
fake-account-detector/data/: instagram_dataset.csv
fake-account-detector/model/: account_model.pkl  metrics.json
fake-account-detector/static/: app.js  style.css
fake-account-detector/templates/: index.html
fake-account-detector/utils/: features.py  instagram_fetch.py  verdict.py
