[project]
name = "fake-account-detector-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair<5",
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "impo>=1.1.1",
    "instagramy>=4.5",
    "instagrapi>=2.3.0",
    "instaloader>=4.15",
    "joblib>=1.5.3",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "pillow>=12.1.1",
    "playwright>=1.58.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
]
